# android_rootkit

./: README.md
client/: Cargo.toml  README.md
client/src/: communication.rs  ddos.rs  main.rs  resolv.rs  socks5.rs  sys.rs  tcp.rs
server/: Cargo.toml
server/src/: cmd.rs  communication.rs  main.rs  proc.rs
